# modpack-localization-auto

./: .env.example  .gitignore  .gitmodules  README.md  config.toml  en_us_test.json  llm_results.json  output.txt  pyproject.toml  test_aba.py  test_aba3.py  test_analyzer.py  test_dict.py  test_kubejs.py  test_regex.py  test_regex2.py
.github/workflows/: localize.yml  release.yml
output/better-mc-neoforge-bmc5/: version.json
output/create-stellar/: version.json
src/modpack_localization_auto/: __init__.py  config.py  downloader.py  extractor.py  kubejs_analyzer.py  main.py  packager.py  translator.py  uploader.py
